<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/buttonStartTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:background="@drawable/custom_button_start"
        android:text="@string/start_test" />
    
    <CheckBox
        android:id="@+id/checkBoxSendResultByEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonStartTest"
        android:layout_centerHorizontal="true"
        android:onClick="onCheckboxSendEmailClicked"
        android:text="@string/check_box_send_email" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonStartTest"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:hint="@string/edit_text_name"
        android:ems="30" >

        <requestFocus />
    </EditText>

</RelativeLayout>